--- a/Style/style.css
+++ b/Style/style.css
@@ -182,7 +182,7 @@ header a:hover{
         0deg,
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5))
-    ,url("/guitarra1.jpg");
+    ,url("/media/guitarra1.jpg");
     
 }
 
