--- a/Style/style.css
+++ b/Style/style.css
@@ -169,7 +169,7 @@ header a:hover{
     padding: 100px 10px;
 }
 
-#niveles p{
+#niveles span{
     display: none; /*mostrar (no) */
 }
 
@@ -200,7 +200,7 @@ header a:hover{
         0deg,
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5))
-    ,url("/guitarra1.jpg");
+    ,url("/media/guitarra1.jpg");
     
 }
 
@@ -209,7 +209,7 @@ header a:hover{
         0deg,
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5))
-    ,url("/guitarra1.jpg");
+    ,url("/media/guitarra1.jpg");
 }
 
 
@@ -276,5 +276,10 @@ footer .container{
     }
 }
 
-
+.hide {
+    display: none;
+}
     
+.show {
+    display: block;
+}
