--- a/Style/style-n-1.css
+++ b/Style/style-n-1.css
@@ -4,6 +4,41 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/* Ocultar botón radio */
+input[id^="spoiler"]{
+    display: none;
+    }
+    /* Estilo botón clicable */
+input[id^="spoiler"] + label {
+    display: block;
+    width: 243px;
+    margin: 4 auto;
+    padding: 5px 20px;
+    border-radius: 10px;
+    color: #8251c2;
+    background: rgb(29, 2, 51);
+    cursor: pointer;
+    transition: all .6s;
+    }
+    /* Estilo botón cuando su INPUT está seleccionado */
+input[id^="spoiler"]:checked + label {
+    color: #9c7cf3;
+    background: #452763;
+    }
+    /* Estilo caja SPOILER (inicialmente oculto) */
+input[id^="spoiler"] ~ .spoiler {
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    opacity: 0;
+    margin: 10px auto 0;
+    }
+    /* Estilo caja SPOILER cuando su INPUT está seleccionado */
+input[id^="spoiler"]:checked + label + .spoiler{
+    height: auto;
+    opacity: 1;
+}
+
 #header{
     position: absolute;
     z-index: 10;
@@ -48,6 +83,8 @@
     background-size: cover;
     background-position: center;
     padding: 280px 0 220px;
+    font-weight: 600;
+    font-size: 1em;
 }
 
 .main h2{
