--- a/Views/nivel-1.html
+++ b/Views/nivel-1.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/Style/style-n-1.css">
-  <link rel="shortcut icon" href="/media/Nebula/icon.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="/media/Nebula/nebula pink.jpg" type="image/x-icon">
   <title>Guitar-Cosmic-Level-1</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark collapse-active">
       <div class="container">
         <a href="/index.html" class="navbar-brand">Guitar Cosmic</a>
-        <button class="navbar-toggler" type="button" data-target="navbarSupportedContenet" data-taggle="collapse" aria-controls="navbarSupportedContenet" aria-expanded="false" aria-label="Toggle Navigation">
+        <button class="navbar-toggler" type="button" data-target="navbarSupportedContenet" data-taggle="collapse-active" aria-controls="navbarSupportedContenet" aria-expanded="false" aria-label="Toggle Navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
