--- a/Views/registrarse.html
+++ b/Views/registrarse.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/Style/style-register.css">
 </head>
 <body class="register">
-    <button type="button" class="btn btn-secondary btn-lg"><a href="index.html">Volver</a></button>
+    <button type="button" class="btn btn-secondary btn-lg"><a href="/index-no-log.html">Volver</a></button>
 
     <div class="container">
         <div class="row justify-content-center">
@@ -40,7 +40,7 @@
                         </div>
                     </form>
                     <div class="text-center mt-3">
-                        <a href="iniciar.html">iniciar sesión</a>
+                        <a href="/Views/iniciar.html">iniciar sesión</a>
                     </div>
                 </div>
             </div>
