--- a/Views/news.html
+++ b/Views/news.html
@@ -16,6 +16,6 @@
   </div>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="/Guitar-Cosmic/js/api.js"></script>
+  <script src="/js/api.js"></script>
 </body>
 </html>
