--- a/Views/nivel-1.html
+++ b/Views/nivel-1.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Este es nivel más básico de Guitar Cosmic, perfecto para comenzar a aprender guitarra ¡Convierte en un guitarrista ahora!">
   <link rel="stylesheet" href="/Style/style-n-1.css">
   <link rel="shortcut icon" href="/media/Nebula/nebula pink.jpg" type="image/x-icon">
   <title>Guitar-Cosmic-Level-1</title>
