--- a/Views/nivel-3.html
+++ b/Views/nivel-3.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="El nivel más elevado de Guitar Cosmic, consigue ser ese guitarrista que deseas ahora, si bien es el ultimo nivel también es el más complicado ¡Cada vez más cerca del objetivo!">
   <link rel="stylesheet" href="/Style/style-n-3.css">
   <link rel="shortcut icon" href="/media/Nebula/icon.jpg" type="image/x-icon">
   <title>Guitar-Cosmic-Level-3</title>
