--- a/Views/nivel-2.html
+++ b/Views/nivel-2.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Nivel intermedio de Guitar Cosmic, sigue avanzando en tu deseo de ser un guitarrista ¡Continúa aprendiendo y logra esa meta!">
   <link rel="stylesheet" href="/Style/style-n-2.css">
   <link rel="shortcut icon" href="/media/Nebula/icon.jpg" type="image/x-icon">
   <title>Guitar-Cosmic-Level-2</title>
