--- a/Style/style-login.css
+++ b/Style/style-login.css
@@ -1,5 +1,5 @@
-footer p{
-    margin-top: 5em;
+footer{
+    margin-top: 100em;
     color: rgb(100, 100, 100);
 }
 
@@ -11,6 +11,3 @@ footer p{
 
 
 
-.container1{
-    margin-top: 7em;
-}
