--- a/Views/news.html
+++ b/Views/news.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Búsqueda de Canciones</title>
+  <title>Partitura y Búsqueda de Canciones</title>
   <link rel="stylesheet" type="text/css" href="/Guitar-Cosmic/Style/style-partiture">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
