--- a/Style/style-n-1.css
+++ b/Style/style-n-1.css
@@ -1,121 +1,59 @@
-*{
+*,*::after,*::before{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+body{
+    background: url("/media/Nebula/nebula\ pink.jpg") no-repeat center center;
+    box-sizing: border-box;
 }
 
-/* Ocultar botón radio */
-input[id^="spoiler"]{
-    display: none;
-    }
-    /* Estilo botón clicable */
-input[id^="spoiler"] + label {
+
+
+.title{
+    color: whitesmoke;
+    padding-bottom: 5%;
+    font-size: 2.5rem;
+    text-align: center;
+
+}
+
+.video{
+    width: 50%;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.video::after{
+    content: "" ;
     display: block;
-    width: 243px;
-    margin: 4 auto;
-    padding: 5px 20px;
-    border-radius: 10px;
-    color: #8251c2;
-    background: rgb(29, 2, 51);
-    cursor: pointer;
-    transition: all .6s;
-    }
-    /* Estilo botón cuando su INPUT está seleccionado */
-input[id^="spoiler"]:checked + label {
-    color: #9c7cf3;
-    background: #452763;
-    }
-    /* Estilo caja SPOILER (inicialmente oculto) */
-input[id^="spoiler"] ~ .spoiler {
     width: 100%;
-    height: 0;
-    overflow: hidden;
-    opacity: 0;
-    margin: 10px auto 0;
-    }
-    /* Estilo caja SPOILER cuando su INPUT está seleccionado */
-input[id^="spoiler"]:checked + label + .spoiler{
-    height: auto;
-    opacity: 1;
+    padding-bottom: 50%;
 }
 
-#header{
+.clase-1{
+    width: 100%;
+    height: 100%;
     position: absolute;
-    z-index: 10;
-    width: 100%;
+    top: 0;
+    left: 0;
 }
 
-.navbar{
-    padding: 50px 0px;
-}
-
-.navbar-brand{
-    font-weight: bold;
-    font-size: 1.5em;
-    text-transform: uppercase;
-    color: #ccc !important;
-}
-
-.nav-item{
-    font-weight: 600;
-    text-transform: uppercase;
-    padding-left: 50px;
-}
-
-.nav-link{
-    color: #ccc !important;
-    letter-spacing: 2px;
-    font-size: 1em;
-    font-weight: 700;
-}
-
-.nav-link:hover{
-    background: #dcdde1 !important;
-    color: #262626 !important;
-    border-radius:  5px;
-    transition: all 0.6s ease 0s;
-}
-
-.main{
-    background: url("/media/Nebula/moon.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    min-height: 100vh;
-    padding: 280px 0 220px;
-    font-weight: 600;
-    font-size: 1em;
-}
-
-.main h2{
-    font-size: 2.6em;
-    color: #dcdde1;
-    text-transform: uppercase;
-    font-weight: bold;
-
-}
-
-.main p{
-    margin-top: 1em;
-    padding: 0;
-    font-size: 16px;
-    color: #ccc;
-    padding-bottom: 25px;
-}
-
-.main .readMore{
-    background: #718093;
-    color: #fff;
-    border-radius: 5px;
-    padding: 10px 20px;
-    text-decoration: none;
+#class-1{
+    margin-top: 10%;
 }
 
 
-
-
-footer p{
-    margin-top: 5em;
-    color: rgb(100, 100, 100);
+.pie-pagina{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20%;
 }
+
+footer{
+    color: whitesmoke;
+    margin-top: 10%;
+}
+
