--- a/Views/nivel-3.html
+++ b/Views/nivel-3.html
@@ -5,68 +5,46 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="El nivel más elevado de Guitar Cosmic, consigue ser ese guitarrista que deseas ahora, si bien es el ultimo nivel también es el más complicado ¡Cada vez más cerca del objetivo!">
-  <link rel="stylesheet" href="/Style/style-n-3.css">
-  <link rel="shortcut icon" href="/media/Nebula/icon.jpg" type="image/x-icon">
-  <title>Guitar-Cosmic-Level-3</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="/Style/style-n-1.css">
+  <link rel="shortcut icon" href="/media/Nebula/nebula pink.jpg" type="image/x-icon">
+  <title>Guitar-Cosmic-Level-1</title>
+  <var><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"></var>
 </head>
 
 <body>
- <section id="header">
-  <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-dark">
-      <div class="container">
-        <a href="/index.html" class="navbar-brand">Guitar Cosmic</a>
-        <button class="navbar-toggler" type="button" data-target="navbarSupportedContenet" data-taggle="collapse" aria-controls="navbarSupportedContenet" aria-expanded="false" aria-label="Toggle Navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContenet">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a href="/index.html" class="nav-link">Inicio</a>
-            </li>
-
-            <li class="nav-item active">
-              <a href="https://www.instagram.com/victor.blanco_oficial/" target="_blank" class="nav-link">Instagram Profesor</a>
-            </li>         
-          </ul>
-        </div>     
-      </div>
-    </nav>
-  </div>
- </section>
-
-
- <section class="main">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12 col-md-6">
-        <h2>Nivel 3</h2>
-        <p>La página aun está en desarrollo y los videos de las clases muy pronto estarán cargados en linea </p>
-        <a href="#" class="readMore">Link de la Clase</a>
-      </div>
+  <header>
+    <div class="container" id="nav">
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/index.html">Guitar Cosmic</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#nosotros">Quienes somos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#niveles">Nuestros cursos</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </div>
+  </header>
+  <div class="container-fluid" id="class-1">
+  <h1 class="title">Clase Numero 3</h1>
+  <div class="video">
+    <iframe class="clase-1" width="560" height="315" src="https://www.youtube.com/embed/QY0EpGyPniQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
+</div>
 
- </section>
-
-
-
-<section>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-    crossorigin="anonymous"></script>
-  </section>
-</body>
 <footer>
   <div class="container-fluid text-center">
     <p>&copy; Esta página esta sujeta a los derechos de autor del equipo de desarrollo Full Stack
@@ -83,4 +61,6 @@
     </p>
   </div>
 </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+</body>
 </html>
