--- a/Views/news.html
+++ b/Views/news.html
@@ -4,18 +4,22 @@
   <title>Partitura y Búsqueda de Canciones</title>
   <link rel="stylesheet" type="text/css" href="/Guitar-Cosmic/Style/style-partiture">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="/Style/style-news.css">
 </head>
 <body>
     
-  <div class="container">
+  <div class="container" id="busqueda">
     <h1>Partitura y Búsqueda de Canciones</h1>
     <input type="text" id="searchInput" placeholder="Buscar canción...">
     <button onclick="searchSong()">Buscar</button>
     <div id="sheetContainer"></div>
   </div>
 
+
+
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="/js/api.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
