--- a/Views/nivel-3.html
+++ b/Views/nivel-3.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/Style/style-n-1.css">
   <link rel="shortcut icon" href="/media/Nebula/nebula pink.jpg" type="image/x-icon">
   <title>Guitar-Cosmic-Level-1</title>
-  <var><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"></var>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 
 <body>
