--- a/Views/nivel-2.html
+++ b/Views/nivel-2.html
@@ -12,32 +12,30 @@
 </head>
 
 <body>
-  <header>
-    <div class="container" id="nav">
-      <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/index.html">Guitar Cosmic</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <section id="header">
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg navbar-dark collapse-active">
+        <div class="container">
+          <a href="/index.html" class="navbar-brand">Guitar Cosmic</a>
+          <button class="navbar-toggler" type="button" data-target="navbarSupportedContenet" data-taggle="collapse-active" aria-controls="navbarSupportedContenet" aria-expanded="false" aria-label="Toggle Navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+  
+          <div class="collapse navbar-collapse" id="navbarSupportedContenet">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                <a href="/index.html" class="nav-link">Inicio</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#nosotros">Quienes somos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#niveles">Nuestros cursos</a>
-              </li>
+  
+              <li class="nav-item active">
+                <a href="https://www.instagram.com/victor.blanco_oficial/" class="nav-link">Instagram Profesor</a>
+              </li>         
             </ul>
-          </div>
+          </div>     
         </div>
       </nav>
     </div>
-  </header>
+   </section>
   <div class="container-fluid" id="class-1">
   <h1 class="title">Clase Numero 2</h1>
   <div class="video">
