--- a/Views/news.html
+++ b/Views/news.html
@@ -18,6 +18,26 @@
 
 
 
+  <section>
+    <footer>
+      <div class="container-fluid text-center">
+        <p>&copy; Esta página esta sujeta a los derechos de autor del equipo de desarrollo Full Stack
+          <br>
+          -----------------------------------------------------------------------------------------
+          <br>
+          Roberto Diaz
+          <br>
+          Christian Cardenas
+          <br>
+          Víctor Blanco
+          <br>
+          -----------------------------------------------------------------------------------------
+        </p>
+      </div>
+    </footer>
+  </section>
+
+
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="/js/api.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
