--- a/Views/news.html
+++ b/Views/news.html
@@ -8,11 +8,30 @@
   <link rel="stylesheet" href="/Style/style-news.css">
 </head>
 <body>
-    
+  <section id="header">
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg navbar-dark collapse-active">
+        <div class="container">
+          <a href="/index.html" class="navbar-brand">Guitar Cosmic</a>
+          <button class="navbar-toggler" type="button" data-target="navbarSupportedContenet" data-taggle="collapse-active" aria-controls="navbarSupportedContenet" aria-expanded="false" aria-label="Toggle Navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+  
+          <div class="collapse navbar-collapse" id="navbarSupportedContenet">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                <a href="/index.html" class="nav-link">Inicio</a>
+              </li>       
+            </ul>
+          </div>     
+        </div>
+      </nav>
+    </div>
+   </section>
   <div class="container" id="busqueda">
     <h1>Partitura y Búsqueda de Canciones</h1>
     <input type="text" id="searchInput" placeholder="Buscar canción...">
-    <button onclick="searchSong()">Buscar</button>
+    <button onclick="searchSong()" class="boton">Buscar</button>
     <div id="sheetContainer"></div>
   </div>
 
