--- a/Views/news.html
+++ b/Views/news.html
@@ -6,6 +6,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="/Style/style-news.css">
+  <link rel="shortcut icon" href="/media/Nebula/nebula pink.jpg" type="image/x-icon">
 </head>
 <body>
   <section id="header">
@@ -31,7 +32,7 @@
   <div class="container" id="busqueda">
     <h1>Partitura y Búsqueda de Canciones</h1>
     <input type="text" id="searchInput" placeholder="Buscar canción...">
-    <button onclick="searchSong()" class="boton">Buscar</button>
+    <button onclick="searchSong()" class="btn btn-primary">Buscar</button>
     <div id="sheetContainer"></div>
   </div>
 
